// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get filtered topics when all filters are active 1`] = `
Array [
  Object {
    "filter": Array [
      "urn:filter:2",
    ],
    "id": "urn:topic:1",
  },
  Object {
    "filter": Array [
      "urn:filter:1",
    ],
    "id": "urn:topic:2",
  },
  Object {
    "filter": Array [
      "urn:filter:3",
    ],
    "id": "urn:topic:3",
  },
]
`;

exports[`get filtered topics when none filters are active 1`] = `
Array [
  Object {
    "filter": Array [
      "urn:filter:2",
    ],
    "id": "urn:topic:1",
  },
  Object {
    "filter": Array [
      "urn:filter:1",
    ],
    "id": "urn:topic:2",
  },
  Object {
    "filter": Array [
      "urn:filter:3",
    ],
    "id": "urn:topic:3",
  },
]
`;

exports[`get filtered topics with two of three filters active 1`] = `
Array [
  Object {
    "filter": Array [
      "urn:filter:1",
    ],
    "id": "urn:topic:2",
  },
  Object {
    "filter": Array [
      "urn:filter:3",
    ],
    "id": "urn:topic:3",
  },
]
`;

exports[`get filtered topics with two of three filters active 2`] = `
Array [
  Object {
    "filter": Array [
      "urn:filter:2",
      "urn:filter:1",
    ],
    "id": "urn:topic:2",
  },
  Object {
    "filter": Array [
      "urn:filter:3",
    ],
    "id": "urn:topic:3",
  },
]
`;
